Fix data format general

--- a/src/app/containers/app-navbar/app-navbar-menu/app-navbar-menu.component.html
+++ b/src/app/containers/app-navbar/app-navbar-menu/app-navbar-menu.component.html
@@ -35,7 +35,7 @@
     <button class="list-group-item"
       *ngIf="signedIn"
       (click)="handleSignOut()">
-      <icon name="sign-out"></icon> Sign Out
+      <icon name="sign-out"></icon> Salir
     </button>
   </div>
 </div>
