--- a/src/app/containers/app-navbar/app-navbar-user/app-navbar-user.component.html
+++ b/src/app/containers/app-navbar/app-navbar-user/app-navbar-user.component.html
@@ -8,6 +8,6 @@
   <span class="btn btn-link navbar-link navbar-btn"
     (click)="handleSignIn()">
     <icon name="sign-in"></icon>
-    Sign In
+    Iniciar
   </span>
 </ng-template>
