--- a/src/app/containers/app-search/search-navigator/search-navigator.component.html
+++ b/src/app/containers/app-search/search-navigator/search-navigator.component.html
@@ -1,9 +1,8 @@
 <ul class="nav nav-tabs search-selector" role="tablist">
-  <li *ngFor="let search of searchTypes" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+  <li
+    *ngFor="let search of searchTypes"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{ exact: true }">
     <a routerLink="{{ search.link }}">{{ search.label }}</a>
-  </li>
-  <li *ngIf="currentPlaylist" class="active">
-    <a>
-      <icon name="chevron-right"></icon> Playlist View</a>
   </li>
 </ul>
