Fix header Remove theme claro

--- a/src/css/themes/index.themes.scss
+++ b/src/css/themes/index.themes.scss
@@ -1,4 +1,4 @@
-@import 
-  './themes/arctic.theme',
+@import
+  './themes/twilight.theme',
   './themes/halloween.theme',
   './themes/bumblebee.theme';
