--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,7 +1,3 @@
-.mdl-navigation {
-  width: 100%;
-}
-
 .mdl-layout-title {
   margin-right: 10px;
 }
@@ -12,11 +8,14 @@
 
 .mdl-layout__header {
   height: 64px;
+  border-radius: 20px;
+  width: auto;
+  margin: 10px;
   background-color: #FF0000;
 }
 
 .mdl-layout__content {
-  width: 95%;
+  width: calc(95% - 10px);
 }
 
 .mdl-layout__header-row {
@@ -25,7 +24,12 @@
 
 .mdl-layout__drawer-button {
   right: 0;
+  margin: 18px;
   left: inherit;
+}
+
+.mdl-textfield__input{
+  border-radius: 20px;
 }
 
 .blur-main-playlist-opened {
@@ -53,9 +57,11 @@
 @media (max-width: 1150px) {
   .mdl-layout__content {
     width: 100%;
+    border-radius: 20px;
   }
   .yt-player,
   .ytp-cued-thumbnail-overlay {
     width: 100px;
+    border-radius: 20px;
   }
 }
