--- a/src/app/main/video-player/video-player.component.css
+++ b/src/app/main/video-player/video-player.component.css
@@ -1,10 +1,12 @@
 .main-player-block {
   position: absolute;
-  width: 100%;
+  width: calc(100% - 10px);
   height: 50px;
   bottom: 0;
   background-color: #FF0000;
   z-index: 992;
+  border-radius: 20px;
+  margin: 5px;
 }
 
 .player-containter {
