--- a/src/app/main/videos-playlist/videos-playlist.component.css
+++ b/src/app/main/videos-playlist/videos-playlist.component.css
@@ -1,9 +1,9 @@
 .playlist {
-  height: calc(100% - 113px);
+  height: calc(100% - 138px);
   width: 5%;
   max-width: 70px;
   position: fixed;
-  top: 64px;
+  top: 74px;
   right: 0;
   background-color: rgba(255, 0, 0, 0.6);
   overflow-x: hidden;
@@ -14,14 +14,18 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  border-radius: 20px;
+  margin: 5px;
 }
 
 .playlist.opened {
   width: 25%;
   max-width: 25%;
   z-index: 993;
-  height: calc(100% - 114px);
+  height: calc(100% - 138px);
   box-shadow: none;
+  border-radius: 20px;
+  margin: 5px;
 }
 
 .playlist-thumbnail {
@@ -31,6 +35,7 @@
   margin: 5px;
   display: inline-block;
   position: relative;
+  border-radius: 20px;
 }
 
 .playist-item.playing {
