--- a/src/app/main/videos-playlist/videos-playlist.component.html
+++ b/src/app/main/videos-playlist/videos-playlist.component.html
@@ -1,13 +1,8 @@
 <div id="playlist" class="playlist" [ngClass]="{'opened': playlistToggle}">
 
-  <div
-    *ngFor="let video of videoPlaylist; let i = index;"
-    id="{{video.id}}"
-    class="playist-item"
-    (click)="play(video.id)"
-    [ngClass]="{'playing': currentPlaying(video.id)}">
-    <div
-      class="playlist-thumbnail"
+  <div *ngFor="let video of videoPlaylist; let i = index;" id="{{video.id}}" class="playist-item"
+    (click)="play(video.id)" [ngClass]="{'playing': currentPlaying(video.id)}">
+    <div class="playlist-thumbnail"
       [ngStyle]="{'background': '#000 url(' + video.snippet.thumbnails.default.url + ') center center no-repeat', 'background-size': '100%'}">
       <span class="no-in-playlist">{{ i + 1 }}</span>
       <span class="video-duration">{{ video.contentDetails.duration | videoDuration }}</span>
@@ -23,10 +18,7 @@
     <div class="playlist-thumbnail" [ngStyle]="{'background': '#000'}">
       <i class="material-icons">block</i>
     </div>
-    <div
-      class="opened-item-info"
-      [ngClass]="{'closed': !playlistToggle}"
-      *ngIf="playlistNames">
+    <div class="opened-item-info" [ngClass]="{'closed': !playlistToggle}" *ngIf="playlistNames">
       La Playlist esta Listo
     </div>
   </div>
