--- a/src/app/main/videos-list/videos-list.component.html
+++ b/src/app/main/videos-list/videos-list.component.html
@@ -1,27 +1,22 @@
-<div
-  class="mdl-cell custom-cell mdl-cell--2-col"
-  id="{{i + video.id}}"
-  *ngFor="let video of videoList; let i = index;"
+<div class="mdl-cell custom-cell mdl-cell--2-col" id="{{i + video.id}}" *ngFor="let video of videoList; let i = index;"
   [ngClass]="{'last-item': i === videoList.length-1}">
   <div class="demo-card-square mdl-card mdl-shadow--2dp">
-    <div
-      class="mdl-card__title mdl-card--expand"
-      (click)="play(video)"
+    <div class="mdl-card__title mdl-card--expand" (click)="play(video)"
       [ngStyle]="{'background': '#000 url(' + video.snippet?.thumbnails.high.url + ') center center no-repeat', 'background-size': '125%'}">
       <div class="video-info-block">
         <div class="video-informations">
           <span style="float: left;">
-						<i class="material-icons">thumb_up</i>
-						{{ video.statistics?.likeCount | videoLikesViews }}
-					</span>
+            <i class="material-icons">thumb_up</i>
+            {{ video.statistics?.likeCount | videoLikesViews }}
+          </span>
           <span style="margin-left: 10px;">
-						<i class="material-icons">remove_red_eye</i>
-						{{ video.statistics?.viewCount | videoLikesViews }}
-					</span>
+            <i class="material-icons">remove_red_eye</i>
+            {{ video.statistics?.viewCount | videoLikesViews }}
+          </span>
           <span style="margin-left: 10px; float: right;">
-						<i class="material-icons">access_time</i>
-						{{ video.contentDetails?.duration | videoDuration }}
-					</span>
+            <i class="material-icons">access_time</i>
+            {{ video.contentDetails?.duration | videoDuration }}
+          </span>
         </div>
       </div>
       <div class="video-name-block">
