--- a/src/app/main/videos-search/videos-search.component.html
+++ b/src/app/main/videos-search/videos-search.component.html
@@ -1,14 +1,9 @@
 <form [formGroup]="searchForm" (ngSubmit)="doSearch($event)">
   <div class="mdl-textfield mdl-js-textfield">
-    <input
-      class="mdl-textfield__input"
-      formControlName="query"
-      type="text"
-      id="query"
-      autocomplete="off" />
+    <input class="mdl-textfield__input" formControlName="query" type="text" id="query" autocomplete="off" />
     <label class="mdl-textfield__label" for="query">Buscar</label>
   </div>
   <button type="submit" class="mdl-button mdl-js-button mdl-button--icon">
-		<i class="material-icons">search</i>
-	</button>
+    <i class="material-icons">search</i>
+  </button>
 </form>
