--- a/src/app/main/videos-search/videos-search.component.html
+++ b/src/app/main/videos-search/videos-search.component.html
@@ -1,9 +1,10 @@
-<form [formGroup]="searchForm" (ngSubmit)="doSearch($event)">
-  <div class="mdl-textfield mdl-js-textfield">
-    <input class="mdl-textfield__input" formControlName="query" type="text" id="query" autocomplete="off" />
-    <label class="mdl-textfield__label" for="query">Buscar</label>
+<form [formGroup]="searchForm" class="row g-3" (ngSubmit)="doSearch($event)">
+  <div class="col-auto">
+    <input class="search-input" placeholder="Busqueda" formControlName="query" type="text" id="query" autocomplete="off" />
   </div>
-  <button type="submit" class="mdl-button mdl-js-button mdl-button--icon">
-    <i class="material-icons">search</i>
-  </button>
+  <div class="col-auto">
+    <button type="submit" class="btn btn-primary mb-3" id="query-btn">
+      <em class="fa fa-search" aria-hidden="true"></em>
+    </button>
+  </div>
 </form>
