--- a/src/app/main/video-player/video-player.component.html
+++ b/src/app/main/video-player/video-player.component.html
@@ -1,74 +1,74 @@
 <div class="main-player-block">
   <div class="player-controls-block">
     <div class="current-playing-text" *ngIf="superMinPlayer">
-      <span class="now-playing-label">Now playing: </span>
+      <span class="now-playing-label">Reproduciendo: </span>
       <span>{{ currentVideoText | videoName: [56, 51] }}</span>
     </div>
-    <span class="mute-block">
+    <!--<span class="mute-block">
       <button id="fullscreen_tip" class="mdl-button mdl-js-button mdl-button--icon"
         [ngClass]="{'active': fullscreenActive}" (click)="toggleFullscreen()">
-        <i class="material-icons">fullscreen</i>
+        <em class="fa fa-window-maximize" aria-hidden="true"></em>
       </button>
       <div class="mdl-tooltip mdl-tooltip--top" data-mdl-for="fullscreen_tip">
-        Fullscreen
+        Pantalla Completa
       </div>
-    </span>
+    </span>-->
     <button id="prev_tip" class="mdl-button mdl-js-button mdl-button--icon prev" (click)="prevVideo()">
-      <i class="material-icons">skip_previous</i>
+      <em class="fa fa-step-backward" aria-hidden="true"></em>
     </button>
     <div class="mdl-tooltip mdl-tooltip--top" data-mdl-for="prev_tip">
-      Previous
+      Anterior
     </div>
     <button class="mdl-button mdl-js-button mdl-button--icon play" (click)="playPause('play')"
       *ngIf="playingEvent === 'pause'">
-      <i class="material-icons">play_circle_filled</i>
+      <em class="fa fa-play-circle" aria-hidden="true"></em>
     </button>
     <button class="mdl-button mdl-js-button mdl-button--icon play" (click)="playPause('pause')"
       *ngIf="playingEvent === 'play'">
-      <i class="material-icons">pause_circle_filled</i>
+      <em class="fa fa-pause-circle" aria-hidden="true"></em>
     </button>
     <button id="next_tip" class="mdl-button mdl-js-button mdl-button--icon next" (click)="nextVideo()">
-      <i class="material-icons">skip_next</i>
+      <em class="fa fa-step-forward" aria-hidden="true"></em>
     </button>
     <div class="mdl-tooltip mdl-tooltip--top" data-mdl-for="next_tip">
-      Next
+      Siguiente
     </div>
     <span class="repeat-shuffle-block">
       <button id="repeat_tip" class="mdl-button mdl-js-button mdl-button--icon" [ngClass]="{'active': repeat}"
         (click)="toggleRepeat()">
-        <i class="material-icons">repeat_one</i>
+        <em class="fa fa-refresh" aria-hidden="true"></em>
       </button>
       <div class="mdl-tooltip mdl-tooltip--top" data-mdl-for="repeat_tip">
-        Repeat one
+        Repetir
       </div>
       <button id="shuffle_tip" class="mdl-button mdl-js-button mdl-button--icon" [ngClass]="{'active': shuffle}"
         (click)="toggleShuffle()">
-        <i class="material-icons">shuffle</i>
+        <em class="fa fa-random" aria-hidden="true"></em>
       </button>
       <div class="mdl-tooltip mdl-tooltip--top" data-mdl-for="shuffle_tip">
-        Shuffle
+        Aleatorio
       </div>
     </span>
   </div>
   <div class="player-containter"
     [ngClass]="{'minimized': minPlayer, 'super-minimized': superMinPlayer, 'player-fullscreen': fullscreenActive}">
     <div class="player-view-controls">
-      <i class="material-icons" *ngIf="!minPlayer && !superMinPlayer && !fullscreenActive"
-        (click)="togglePlayer()">arrow_drop_down</i>
-      <i class="material-icons arrow_drop_up" *ngIf="minPlayer && !superMinPlayer && !fullscreenActive"
-        (click)="togglePlayer()">arrow_drop_up</i>
-      <i class="material-icons minimize" *ngIf="!superMinPlayer && !fullscreenActive"
-        (click)="minimizePlayer()">remove</i>
+      <em class="fa fa-chevron-circle-down  ms-auto me-auto" aria-hidden="true"
+        *ngIf="!minPlayer && !superMinPlayer && !fullscreenActive" (click)="togglePlayer()"></em>
+      <em class="fa fa-chevron-circle-up arrow_drop_up ms-auto me-auto" aria-hidden="true"
+        *ngIf="minPlayer && !superMinPlayer && !fullscreenActive" (click)="togglePlayer()"></em>
+      <em class="fa fa-times minimize ms-auto me-auto" aria-hidden="true" *ngIf="!superMinPlayer && !fullscreenActive"
+        (click)="minimizePlayer()"></em>
     </div>
     <div class="main-yt-player-block">
-      <i class="material-icons" *ngIf="superMinPlayer" (click)="minimizePlayer()">zoom_out_map</i>
+      <em class="material-icons" *ngIf="superMinPlayer" (click)="minimizePlayer()">zoom_out_map</em>
       <div id="yt-player"></div>
     </div>
   </div>
 
   <button id="demo-menu-top-right" class="mdl-button mdl-js-button mdl-button--icon playlist-drop-button"
     (click)="openClosedPlaylist()">
-    <i class="material-icons">more_vert</i>
+    <em class="material-icons">more_vert</em>
   </button>
 
   <ul class="mdl-menu mdl-menu--top-right mdl-js-menu dark" data-mdl-for="demo-menu-top-right">
@@ -76,7 +76,9 @@
     <li class="mdl-menu__item" (click)="importPlaylistAction()">Importar playlist</li>
     <li class="mdl-menu__item mdl-menu__item--full-bleed-divider" (click)="clearPlaylistAction()">Limpiar playlist</li>
     <li class="mdl-menu__item" (click)="toggleNotifications()"
-      [ngStyle]="{'color': !notifications ? 'rgb(186, 52, 54)': 'rgb(53, 132, 39)' }">Notificaciones</li>
+      [ngStyle]="{'color': !notifications ? 'var(--site-color)': 'var(--text-color)' }">
+      Notificaciones
+    </li>
   </ul>
 
   <input id="import_button" style="display: none;" type="file" name="file" accept=".json, .txt"
