--- a/src/app/main/videos-playlist/videos-playlist.component.css
+++ b/src/app/main/videos-playlist/videos-playlist.component.css
@@ -8,7 +8,7 @@
   background-color: var(--bg-site-g) !important;
   overflow-x: hidden;
   transition: 0.1s;
-  box-shadow: -2px 2px 2px 0 rgba(0, 0, 0, .14), -2px 3px 1px -2px rgba(0, 0, 0, .2), -2px 1px 5px 0 rgba(0, 0, 0, .12);
+  box-shadow: none;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
