--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ body{
   width: 40px;
   height: 40px;
   border: 0.2rem solid var(--site-color);
-  border-top-color: vat(--text-color);
+  border-top-color: vat(--bg-site-g);
   -webkit-animation: spin 1s infinite linear;
   animation: spin 1s infinite linear;
 }
@@ -56,13 +56,14 @@ body{
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #1F1F1F;
+  background: var(--bg-site-g);
+  border-radius: var(--site-redius);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: var(--site-color);
-  border-radius: 10px;
+  border-radius: var(--site-redius);
 }
 
 /* Handle on hover */
