--- a/src/app/main/video-player/video-player.component.html
+++ b/src/app/main/video-player/video-player.component.html
@@ -66,6 +66,9 @@
     </div>
   </div>
 
+  <div class="mdl-button mdl-js-button mdl-button--icon playlist-drop-button" style="right: 43px; top: 12px;">
+    <app-theme-selector></app-theme-selector>
+  </div>
   <button id="demo-menu-top-right" class="mdl-button mdl-js-button mdl-button--icon playlist-drop-button"
     (click)="openClosedPlaylist()">
     <em class="material-icons">more_vert</em>
